changed caption to picture in div class

--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 6</div>
       <img src="./images/pexels-alexander-grey-1191710.jpg" style="width:100%">
-      <div class="text">Caption One</div>
+      <div class="text">Picture One</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 6</div>
       <img src="./images/pexels-daniel-frank-323311.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <div class="text">Picture Two</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 6</div>
       <img src="./images/pexels-jonathan-petersson-1237119.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
+      <div class="text">Picture Three</div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext">4 / 6</div>
         <img src="./images/pexels-nick-collins-1292998.jpg" style="width:100%">
-        <div class="text">Caption Four</div>
+        <div class="text">Picture Four</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">5 / 6</div>
         <img src="./images/pexels-pixabay-461940.jpg" style="width:100%">
-        <div class="text">Caption Five</div>
+        <div class="text">Picture Five</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">6 / 6</div>
         <img src="./images/pexels-todd-trapani-1198817.jpg" style="width:100%">
-        <div class="text">Caption Six</div>
+        <div class="text">Picture Six</div>
       </div>
   
     <!-- Next and previous buttons -->
